# OQS-SSC

./: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
src/: main.cpp
